--- a/Developer.css
+++ b/Developer.css
@@ -111,4 +111,19 @@ element.style {
     left: 130px;
 }
 
+#chat [data-cid^='5712221-'] .un:hover:after,
+#chat [data-cid^='5712221-'] .un:hover:after,
+#chat [data-cid^='5712221-'] .un:hover:after,
+#chat [data-cid^='5712221-'] .un:hover:after,
+#chat [data-cid^='5712221-'] .un:hover:after{
+    content: 'TM Head-Developer';
+    background: url('https://lh3.ggpht.com/-JkqsXEOZDhY/UZJrsptMOWI/AAAAAAAADqY/ZsI2QK4SK6I/s1600/thunder-symbol-facebook-symbol.png');
+    padding: 3px 6px;
+    bottom: 20px;
+    position: absolute;
+    left: 5px;
+    width: 79px;
+    height: 26px;
+
+
 /* https://pastebin.com/favicon.ico */
