--- a/TM.css
+++ b/TM.css
@@ -322,11 +322,12 @@
     box-shadow: inset 0 0 0 1px #05F ;
     color: #EEE ;	
 }
-#footer { 
-	z-index: 90; 
-	width: 100%; 
-	background: rgba(40, 44, 53, 0.73); 
-	box-shadow: inset 0 2px 0 -1px #0A0A0A;
+#footer {
+    background-image: url(https://i.imgur.com/H99gROp.jpg);
+}
+
+#footer-user .info .name, #footer-user .meta, .lobby .create span {
+    font-size: 17px;
 }
 
 #footer #playlist-meta .bar-button {
