--- a/Owner.css
+++ b/Owner.css
@@ -55,7 +55,7 @@ element.style {
     content: TM Owner;
     background: url('http://www.aeret.eu/layoutfile/mod/users/bdt_img/ellenorzokod.png');
     padding: 3px 6px;
-    color: yellow;
+    color: darkred;
     bottom: 20px;
     position: absolute;
     left: 5px;
@@ -76,7 +76,7 @@ element.style {
 
 #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after, #user-rollover.id-3669054 .meta:after {
     content: 'TM Owner';
-    color: yellow;
+    color: darkred;
     position: absolute;
     top: 110px;
     left: 110px;
@@ -89,7 +89,7 @@ element.style {
 #chat [data-cid^='3669054-'] .un:hover:after,
 #chat [data-cid^='3669054-'] .un:hover:after{
     content: 'TM Owner';
-    background: url('https://rawgit.com/Satskhi/EDTRCS/master/images/tooltip.png');
+    background: url('');
     padding: 3px 6px;
     bottom: 20px;
     position: absolute;
@@ -137,7 +137,7 @@ element.style {
     display: inline-block;
     padding: 0px;
     color: green;
-    background: linear-gradient(rgba(0, 0, 0, 0.), rgba(0, 0, 0, 0.));
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
     border-radius: 0px;
     font-size: 10px;
 }
