New Update Users CSS

--- a/Users.css
+++ b/Users.css
@@ -3,13 +3,13 @@
 /* TitanMusic | Developer */
  [data-cid^="3669054-"] .badge-box .bdg {
      border-radius: 6px !important;
-     background-image: url("http://i.imgur.com/WSnlRjs.gif") !important;
+     background-image: url("") !important;
      background-repeat: round !important;
      background-size: 30px !important;
  }
  #user-rollover.id-3669054 .badge-box .bdg {
      border-radius: 8px !important;
-     background-image: url("http://i.imgur.com/WSnlRjs.gif") !important;
+     background-image: url("") !important;
      background-repeat: round !important;
      background-size: 30px !important;
  }
