--- a/TM.css
+++ b/TM.css
@@ -95,51 +95,51 @@
     top: 0px;
  }
  #user-lists .group.host {
-    color: #5BF;
+    color: #0099ff;
     background: linear-gradient(to right, hsla(210,100%,30%,.5), hsla(210,100%,40%,.5)) !important;
     top: 1px;
  }
  #user-lists .group.host ~ .user:nth-child(2) span {
-    color: #5Bf;
+    color: #004cff;
  }
  #user-lists .group.host ~ .user span {
-    color: #58F;
+    color: #004cff;
  }
  #user-lists .group.manager {
-    color: #E15;
+    color: #ff1e00;
     background: linear-gradient(to right, hsla(0,100%,20%,.5), hsla(0,100%,30%,.5)) !important;
  }
  #user-lists .group.manager ~ .user span {
-    color: #E15;
+    color: #ff1e00;
  }
  #user-lists .group.bouncer {
-    color: #F45;
+    color: #9900ff;
     background: linear-gradient(to right, hsla(10,100%,30%,.5), hsla(10,100%,40%,.5)) !important;
  }
  #user-lists .group.bouncer ~ .user span {
-    color: #F45;
+    color: #9900ff;
  }
  #user-lists .group.dj {
-    color: #F95;
+    color: #ff9900;
     background: linear-gradient(to right, hsla(20,100%,30%,.5), hsla(30,100%,40%,.5)) !important;
  }
  #user-lists .group.dj ~ .user span {
-    color: #F95;
+    color: #ff9900;
  }
  .icon-chat-host + span, #user-lists .group.host ~ .user span, #dialog-user-role .role-menu .menu ul .host span {
-    color: #5BF;
+    color: #0099ff;
  }
  .icon-chat-cohost + span, #user-lists .group.cohost ~ .user span, #dialog-user-role .role-menu .menu ul .cohost span {
-    color: #58f;
+    color: #004cff;
  }
  .icon-chat-manager + span, #user-lists .group.manager ~ .user span, #dialog-user-role .role-menu .menu ul .manager span {
-    color: #E15;
+    color: #ff1e00;
  }
  .icon-chat-bouncer + span, #user-lists .group.bouncer ~ .user span, #dialog-user-role .role-menu .menu ul .bouncer span {
-    color: #F45;
+    color: #9900ff;
  }
  .icon-chat-dj + span, #user-lists .group.dj ~ .user span, #dialog-user-role .role-menu .menu ul .dj span {
-    color: #F95;  
+    color: #ff9900;  
  }
  #the-user-profile .notifications.section .row {
 	border-radius: 10px;
@@ -598,7 +598,7 @@
 }
 
 #room-info {
-    -webkit-filter: opacity(90%);
+    -webkit-filter: opacity(50%);
     background-image: url(https://i.imgur.com/H99gROp.jpg);
     filter: opacity(90%);
 }
