--- a/TM.css
+++ b/TM.css
@@ -8,6 +8,14 @@
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Owner.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Vip.css");
 
+element.style {
+}
+TM.css:455
+#chat .cm.moderation {
+    background: linear-gradient(hsl(198, 57%, 3%), hsla(191, 50%, 15%, 0.8)), linear-gradient(to right, hsla(0,0%,0%,0), hsla(0,0%,100%,.2));
+    border: none;
+    box-shadow: inset 0 0 0 1px hsl(198, 100%, 43%);
+}
 #playlist-button {
     position: absolute;
     top: 0;
