--- a/TM.css
+++ b/TM.css
@@ -8,6 +8,16 @@
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Owner.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Vip.css");
 
+#chat .cm.user-action .msg .from .un, #chat .cm.user-action .timestamp {
+    color: hsl(0, 0%, 100%);
+}
+#chat .cm.user-action {
+    background: linear-gradient(hsl(205, 79%, 47%), #100887), linear-gradient(to right, hsla(0,0%,0%,0), hsla(0,0%,100%,.2));
+    box-shadow: inset 0 0 0 1px hsla(0,0%,100%,.1);
+}
+#chat .user-action {
+    color: #ffffff;
+}
 element.style {
     height: 140px;
 }
