--- a/Bot.css
+++ b/Bot.css
@@ -1,5 +1,8 @@
 /* Bot: 20168147 */
 
+.role-cohost .msg .from .icon-chat-host .id-20168147 {
+    background: url(http://storage.proboards.com/forum/images/icon-options.png) !important;
+}
 #chat-messages .id-20168147 {
     border-left: 3px solid rgb(29, 5, 255);
     background: rgb(20, 21, 24) !important;
