--- a/Developer.css
+++ b/Developer.css
@@ -36,7 +36,7 @@
 
 .id-5712221 > .badge-box > i.bdg
 {
-    background-image:    url("http://25.media.tumblr.com/bf311a757586df96ba089aaad0484674/tumblr_mhfc9nHvos1r7c13zo1_500.gif");
+    background-image:    url("http://rs1192.pbsrc.com/albums/aa331/YakusokuChan/Lawlit.gif~c200");
     background-size:     cover;
     background-repeat:   no-repeat;
     background-position: center center;
@@ -47,7 +47,7 @@
 }
 
 #user-rollover.id-5712221 .badge-box > i.bdg {
-    background-image: url("http://25.media.tumblr.com/bf311a757586df96ba089aaad0484674/tumblr_mhfc9nHvos1r7c13zo1_500.gif");
+    background-image: url("http://rs1192.pbsrc.com/albums/aa331/YakusokuChan/Lawlit.gif~c200");
     background-size: cover;
     border-radius: 6px;
     background-repeat: no-repeat;
