--- a/Developer.css
+++ b/Developer.css
@@ -55,7 +55,7 @@
 }
 
 .list.room .user.id-5712221 .icon-chat-dj {
-    background: url(https://lh3.ggpht.com/-JkqsXEOZDhY/UZJrsptMOWI/AAAAAAAADqY/ZsI2QK4SK6I/s1600/thunder-symbol-facebook-symbol.png) no-repeat !important;
+    background: url("https://lh3.ggpht.com/-JkqsXEOZDhY/UZJrsptMOWI/AAAAAAAADqY/ZsI2QK4SK6I/s1600/thunder-symbol-facebook-symbol.png") no-repeat !important;
 }
 
 #user-rollover.id-5712221 .meta, #user-rollover.id-5712221 .meta, #user-rollover.id-5712221 .meta {
