--- a/Bot.css
+++ b/Bot.css
@@ -19,7 +19,7 @@
     content:'BOT';
 }
 #user-rollover.id-20168147 .badge-box > i.bdg {
-    background-image: url("https://media.giphy.com/media/HnKSuvC39SdOM/giphy.gif");
+    background-image: url("http://66.media.tumblr.com/d2a89ed91e869164b7c6847a9b5573c9/tumblr_nuseqpusRc1sx0pi3o1_500.gif");
     background-size: cover;
     border-radius: 6px;
     background-repeat: no-repeat;
@@ -27,7 +27,7 @@
 }
 .id-20168147 > .badge-box > i.bdg
 {
-    background-image:    url("https://media.giphy.com/media/HnKSuvC39SdOM/giphy.gif");
+    background-image:    url("http://66.media.tumblr.com/d2a89ed91e869164b7c6847a9b5573c9/tumblr_nuseqpusRc1sx0pi3o1_500.gif");
     background-size:     cover;
     background-repeat:   no-repeat;
     background-position: center center;
