--- a/Bot.css
+++ b/Bot.css
@@ -89,7 +89,7 @@ element.style {
 
 .id-20168147 > .badge-box > i.bdg
 {
-    background-image:    url("");
+    background-image:    url("https://media.giphy.com/media/Orz1gG2hyXVLi/giphy.gif");
     background-size:     cover;
     background-repeat:   no-repeat;
     background-position: center center;
