--- a/Custom PP.css
+++ b/Custom PP.css
@@ -1,1 +1,14 @@
+/*☠❤♛✧UkuT✧♛❤☠ > 15253919 */;
 
+#user-rollover.id-5712221 .badge-box > i.bdg {
+    background-image: url("http://rs1192.pbsrc.com/albums/aa331/YakusokuChan/Lawlit.gif~c200");
+    background-size: cover;
+    border-radius: 6px;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+    background-image:    url("http://rs1192.pbsrc.com/albums/aa331/YakusokuChan/Lawlit.gif~c200");
+    background-size:     cover;
+    background-repeat:   no-repeat;
+    background-position: center center;
+}
