--- a/Custom PP.css
+++ b/Custom PP.css
@@ -1,13 +1,15 @@
 /*☠❤♛✧UkuT✧♛❤☠ > 15253919 */;
 
-#user-rollover.id-5712221 .badge-box > i.bdg {
-    background-image: url("http://rs1192.pbsrc.com/albums/aa331/YakusokuChan/Lawlit.gif~c200");
+#user-rollover.id-15253919 .badge-box > i.bdg {
+    background-image: url("https://i.ytimg.com/vi/DGaK90YXKK8/maxresdefault.jpg");
     background-size: cover;
     border-radius: 6px;
     background-repeat: no-repeat;
     background-position: center center;
 }
-    background-image:    url("http://rs1192.pbsrc.com/albums/aa331/YakusokuChan/Lawlit.gif~c200");
+.id-15253919 > .badge-box > i.bdg
+{
+    background-image:    url("https://i.ytimg.com/vi/DGaK90YXKK8/maxresdefault.jpg");
     background-size:     cover;
     background-repeat:   no-repeat;
     background-position: center center;
