--- a/TM.css
+++ b/TM.css
@@ -7,6 +7,7 @@
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Developer.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Owner.css");
 @import url("https://rawgit.com/TitanMusicDev/TMCss/master/Vip.css");
+@import url("https://rawgit.com/TitanMusicDev/TMCss/master/Custom%20PP.css");
 
 #chat .cm.user-action .msg .from .un, #chat .cm.user-action .timestamp {
     color: hsl(0, 0%, 100%);
