--- a/Custom PP.css
+++ b/Custom PP.css
@@ -7,10 +7,10 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
-.id-15253919 > .badge-box > i.bdg
-{
-    background-image:    url("https://i.ytimg.com/vi/DGaK90YXKK8/maxresdefault.jpg");
-    background-size:     cover;
-    background-repeat:   no-repeat;
+#user-rollover.id-15253919 .badge-box > i.bdg {
+    background-image: url(https://i.ytimg.com/vi/DGaK90YXKK8/maxresdefault.jpg);
+    background-size: cover;
+    border-radius: 6px;
+    background-repeat: no-repeat;
     background-position: center center;
 }
