--- a/Custom PP.css
+++ b/Custom PP.css
@@ -8,7 +8,7 @@
     background-position: center center;
 }
 #user-rollover.id-15253919 .badge-box > i.bdg {
-    background-image: url(https://i.ytimg.com/vi/DGaK90YXKK8/maxresdefault.jpg);
+    background-image: url("https://i.ytimg.com/vi/DGaK90YXKK8/maxresdefault.jpg");
     background-size: cover;
     border-radius: 6px;
     background-repeat: no-repeat;
