--- a/Custom PP.css
+++ b/Custom PP.css
@@ -1,9 +1,8 @@
 /*☠❤♛✧UkuT✧♛❤☠ > 15253919 */;
 
-#user-rollover.id-15253919 .badge-box > i.bdg {
+.id-15253919 > .badge-box > i.bdg {
     background-image: url("https://i.ytimg.com/vi/DGaK90YXKK8/maxresdefault.jpg");
     background-size: cover;
-    border-radius: 6px;
     background-repeat: no-repeat;
     background-position: center center;
 }
