--- a/Staff.css
+++ b/Staff.css
@@ -1,3 +1,57 @@
+/*UkuTalvar 15253919*/
+#user-rollover.id-15253919.meta, #user-rollover.id-15253919.meta, #user-rollover.id-15253919.meta {
+    height: 150px;
+}
+element.style {
+    height: 150px;
+}
+#user-rollover .meta {
+    min-height: 126px;
+}
+
+#chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before {
+    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
+    top: -2px;
+    left: -3px;
+    position: relative;
+}
+
+#chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un {
+    top: 3px ;
+    position: relative;
+}
+
+#chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after {
+    content: TM Staff;
+    background: url('http://www.gotigersolutions.com/images/medal-gold.png');
+    padding: 3px 6px;
+    color: white;
+    bottom: 20px;
+    position: absolute;
+    left: 5px;
+    width: 79px;
+    height: 26px;
+}
+
+#user-rollover.id-15253919.meta, #user-rollover.id-15253919.meta {
+    height: 150px ;
+}
+
+#user-rollover.id-15253919.meta:before, #user-rollover.id-15253919.meta:before, #user-rollover.id-15253919.meta:before, #user-rollover.id-15253919.meta:before, #user-rollover.id-3669054 .meta:before {
+    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
+    top: 120px;
+    left: 109px;
+    position: absolute;
+}
+
+#user-rollover.id-15253919.meta:after, #user-rollover.id-15253919.meta:after, #user-rollover.id-15253919.meta:after, #user-rollover.id-15253919.meta:after, #user-rollover.id-15253919.meta:after {
+    content: 'TM Staff';
+    color: #808691;
+    position: absolute;
+    top: 118px;
+    left: 130px;
+}
+
 /* Appz = 3544413 */
 #user-rollover.id-3544413 .meta, #user-rollover.id-3544413 .meta, #user-rollover.id-3544413 .meta {
     height: 150px;
