--- a/Staff.css
+++ b/Staff.css
@@ -1,4 +1,4 @@
-/*UkuTalvar 15253919*/
+/*☠❤♛✧UkuT✧♛❤☠ 15253919*/
 #user-rollover.id-15253919.meta, #user-rollover.id-15253919.meta, #user-rollover.id-15253919.meta {
     height: 150px;
 }
@@ -23,7 +23,7 @@ element.style {
 
 #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after {
     content: TM Staff;
-    background: url('http://www.gotigersolutions.com/images/medal-gold.png');
+    background: url('/*http://www.gotigersolutions.com/images/medal-gold.png*
     padding: 3px 6px;
     color: white;
     bottom: 20px;
@@ -52,277 +52,6 @@ element.style {
     left: 130px;
 }
 
-/* Appz = 3544413 */
-#user-rollover.id-3544413 .meta, #user-rollover.id-3544413 .meta, #user-rollover.id-3544413 .meta {
-    height: 150px;
-}
-element.style {
-    height: 150px;
-}
-#user-rollover .meta {
-    min-height: 126px;
-}
-
-#chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before, #chat [data-cid^='3544413-'] .un:before {
-    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
-    top: -2px;
-    left: -3px;
-    position: relative;
-}
-
-#chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un, #chat [data-cid^='3544413-'] .un {
-    top: 3px ;
-    position: relative;
-}
-
-#chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after, #chat [data-cid^='3544413-'] .un:hover:after {
-    content: TM Staff;
-    background: url('http://www.gotigersolutions.com/images/medal-gold.png');
-    padding: 3px 6px;
-    color: white;
-    bottom: 20px;
-    position: absolute;
-    left: 5px;
-    width: 79px;
-    height: 26px;
-}
-
-#user-rollover.id-3544413 .meta, #user-rollover.id-3544413 .meta {
-    height: 150px ;
-}
-
-#user-rollover.id-3544413 .meta:before, #user-rollover.id-3544413 .meta:before, #user-rollover.id-3544413 .meta:before, #user-rollover.id-3544413 .meta:before, #user-rollover.id-3669054 .meta:before {
-    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
-    top: 120px;
-    left: 109px;
-    position: absolute;
-}
-
-#user-rollover.id-3544413 .meta:after, #user-rollover.id-3544413 .meta:after, #user-rollover.id-3544413 .meta:after, #user-rollover.id-3544413 .meta:after, #user-rollover.id-3544413 .meta:after {
-    content: 'TM Staff';
-    color: #808691;
-    position: absolute;
-    top: 118px;
-    left: 130px;
-}
-
-/* keekz🐺 Hardstyle 2017 ♫ = 4766242 */
-
-#user-rollover.id-4766242 .meta, #user-rollover.id-4766242 .meta, #user-rollover.id-4766242 .meta {
-    height: 150px;
-}
-element.style {
-    height: 150px;
-}
-#user-rollover .meta {
-    min-height: 126px;
-}
-
-#chat [data-cid^='4766242-'] .un:before, #chat [data-cid^='4766242-'] .un:before, #chat [data-cid^='4766242-'] .un:before, #chat [data-cid^='4766242-'] .un:before, #chat [data-cid^='4766242-'] .un:before {
-    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
-    top: -2px;
-    left: -3px;
-    position: relative;
-}
-
-#chat [data-cid^='4766242-'] .un, #chat [data-cid^='4766242-'] .un, #chat [data-cid^='4766242-'] .un, #chat [data-cid^='4766242-'] .un, #chat [data-cid^='4766242-'] .un {
-    top: 3px ;
-    position: relative;
-}
-
-#chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after, #chat [data-cid^='4766242-'] .un:hover:after {
-    content: TM Staff;
-    background: url('http://www.gotigersolutions.com/images/medal-gold.png');
-    padding: 3px 6px;
-    color: white;
-    bottom: 20px;
-    position: absolute;
-    left: 5px;
-    width: 79px;
-    height: 26px;
-}
-
-#user-rollover.id-4766242 .meta, #user-rollover.id-4766242 .meta {
-    height: 150px ;
-}
-
-#user-rollover.id-v .meta:before, #user-rollover.id-4766242 .meta:before, #user-rollover.id-4766242 .meta:before, #user-rollover.id-4766242 .meta:before, #user-rollover.id-4766242 .meta:before {
-    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
-    top: 120px;
-    left: 109px;
-    position: absolute;
-}
-
-#user-rollover.id-4766242 .meta:after, #user-rollover.id-4766242 .meta:after, #user-rollover.id-4766242 .meta:after, #user-rollover.id-4766242 .meta:after, #user-rollover.id-4766242 .meta:after {
-    content: 'TM Staff';
-    color: #808691;
-    position: absolute;
-    top: 118px;
-    left: 130px;
-}
-
-/* ONEANDONLY23 = 16021074 */
-
-#user-rollover.id-16021074 .meta, #user-rollover.id-16021074 .meta, #user-rollover.id-16021074 .meta {
-    height: 150px;
-}
-element.style {
-    height: 150px;
-}
-#user-rollover .meta {
-    min-height: 126px;
-}
-
-#chat [data-cid^='16021074-'] .un:before, #chat [data-cid^='16021074-'] .un:before, #chat [data-cid^='16021074-'] .un:before, #chat [data-cid^='16021074-'] .un:before, #chat [data-cid^='16021074-'] .un:before {
-    content: url("https://lh3.ggpht.com/-1tkQjLf2C9Q/UZOhoX35OHI/AAAAAAAADts/4-4ZLJ2b7S0/s1600/stars-symbol.png");
-    top: 3px;
-    left: -3px;
-    position: relative;
-}
-
-#chat [data-cid^='16021074-'] .un, #chat [data-cid^='16021074-'] .un, #chat [data-cid^='16021074-'] .un, #chat [data-cid^='16021074-'] .un, #chat [data-cid^='16021074-'] .un {
-    top: -3px ;
-    position: relative;
-}
-
-#chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after, #chat [data-cid^='16021074-'] .un:hover:after {
-    content: TM Developer;
-    background: url('https://lh3.ggpht.com/-1tkQjLf2C9Q/UZOhoX35OHI/AAAAAAAADts/4-4ZLJ2b7S0/s1600/stars-symbol.png');
-    padding: 3px 6px;
-    color: white;
-    bottom: 20px;
-    position: absolute;
-    left: 5px;
-    width: 79px;
-    height: 26px;
-}
-
-#user-rollover.id-16021074 .meta, #user-rollover.id-16021074 .meta {
-    height: 150px ;
-}
-
-#user-rollover.id-v .meta:before, #user-rollover.id-16021074 .meta:before, #user-rollover.id-16021074 .meta:before, #user-rollover.id-16021074 .meta:before, #user-rollover.id-16021074 .meta:before {
-    content: url("https://lh3.ggpht.com/-1tkQjLf2C9Q/UZOhoX35OHI/AAAAAAAADts/4-4ZLJ2b7S0/s1600/stars-symbol.png");
-    top: 120px;
-    left: 109px;
-    position: absolute;
-}
-
-#user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after, #user-rollover.id-16021074 .meta:after {
-    content: 'TM Developer';
-    color: #808691;
-    position: absolute;
-    top: 118px;
-    left: 130px;
-}    
-    
-/* Firebeat1 = 5096489 */
-    
-#user-rollover.id-5096489 .meta, #user-rollover.id-5096489 .meta, #user-rollover.id-5096489 .meta {
-    height: 150px;
-}
-    
-element.style {
-    height: 150px;
-}
-    
-#user-rollover .meta {
-    min-height: 126px;
-}
-
-#chat [data-cid^='5096489-'] .un:before, #chat [data-cid^='5096489-'] .un:before, #chat [data-cid^='5096489-'] .un:before, #chat [data-cid^='5096489-'] .un:before, #chat [data-cid^='5096489-'] .un:before {
-    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
-    top: -2px;
-    left: -3px;
-    position: relative;
-}
-
-#chat [data-cid^='5096489-'] .un, #chat [data-cid^='5096489-'] .un, #chat [data-cid^='5096489-'] .un, #chat [data-cid^='5096489-'] .un, #chat [data-cid^='5096489-'] .un {
-    top: 3px ;
-    position: relative;
-}
-
-#chat [data-cid^='5096489-'] .un:hover:after, #chat [data-cid^='5096489-'] .un:hover:after, #chat [data-cid^='5096489-'] .un:hover:after, #chat [data-cid^='5096489-'] .un:hover:after, #chat [data-cid^='5096489-'] .un:hover:after {
-    content: TM Staff;
-    background: url('http://www.gotigersolutions.com/images/medal-gold.png');
-    padding: 3px 6px;
-    color: white;
-    bottom: 20px;
-    position: absolute;
-    left: 5px;
-    width: 79px;
-    height: 26px;
-}
-
-#user-rollover.id-5096489 .meta, #user-rollover.id-5096489 .meta {
-    height: 150px ;
-}
-
-#user-rollover.id-5096489 .meta:before, #user-rollover.id-5096489 .meta:before, #user-rollover.id-5096489 .meta:before, #user-rollover.id-5096489 .meta:before, #user-rollover.id-5096489 .meta:before {
-    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
-    top: 120px;
-    left: 109px;
-    position: absolute;
-}
-
-#user-rollover.id-5096489 .meta:after, #user-rollover.id-5096489 .meta:after, #user-rollover.id-5096489 .meta:after, #user-rollover.id-5096489 .meta:after, #user-rollover.id-5096489 .meta:after {
-    content: 'TM Staff';
-    color: #808691;
-    position: absolute;
-    top: 118px;
-    left: 130px;
-}  
-
-/* Pelaja = 4082125 */
-#user-rollover.id-4082125 .meta, #user-rollover.id-4082125 .meta, #user-rollover.id-4082125 .meta {
-    height: 150px;
-}
-element.style {
-    height: 150px;
-}
-#user-rollover .meta {
-    min-height: 126px;
-}
-
-#chat [data-cid^='4082125-'] .un:before, #chat [data-cid^='4082125-'] .un:before, #chat [data-cid^='4082125-'] .un:before, #chat [data-cid^='4082125-'] .un:before, #chat [data-cid^='4082125-'] .un:before {
-    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
-    top: -2px;
-    left: -3px;
-    position: relative;
-}
-
-#chat [data-cid^='4082125-'] .un, #chat [data-cid^='4082125-'] .un, #chat [data-cid^='4082125-'] .un, #chat [data-cid^='4082125-'] .un, #chat [data-cid^='4082125-'] .un {
-    top: 3px ;
-    position: relative;
-}
-
-#chat [data-cid^='4082125-'] .un:hover:after, #chat [data-cid^='4082125-'] .un:hover:after, #chat [data-cid^='4082125-'] .un:hover:after, #chat [data-cid^='4082125-'] .un:hover:after, #chat [data-cid^='4082125-'] .un:hover:after {
-    content: TM Staff;
-    background: url('http://www.gotigersolutions.com/images/medal-gold.png');
-    padding: 3px 6px;
-    color: white;
-    bottom: 20px;
-    position: absolute;
-    left: 5px;
-    width: 79px;
-    height: 26px;
-}
-
-#user-rollover.id-4082125 .meta, #user-rollover.id-4082125 .meta {
-    height: 150px ;
-}
-
-#user-rollover.id-4082125 .meta:before, #user-rollover.id-4082125 .meta:before, #user-rollover.id-4082125 .meta:before, #user-rollover.id-4082125 .meta:before, #user-rollover.id-4082125 .meta:before {
-    content: url("http://www.gotigersolutions.com/images/medal-gold.png");
-    top: 120px;
-    left: 109px;
-    position: absolute;
-}
-
-#user-rollover.id-4082125 .meta:after, #user-rollover.id-4082125 .meta:after, #user-rollover.id-4082125 .meta:after, #user-rollover.id-4082125 .meta:after, #user-rollover.id-4082125 .meta:after {
-    content: 'TM Staff';
-    color: #808691;
-    position: absolute;
-    top: 118px;
-    left: 130px;
-}
+/*More comming soon */
+/*http://www.gotigersolutions.com/images/medal-gold.png*/
+/*https://lh3.ggpht.com/-1tkQjLf2C9Q/UZOhoX35OHI/AAAAAAAADts/4-4ZLJ2b7S0/s1600/stars-symbol.png*/
