--- a/Staff.css
+++ b/Staff.css
@@ -1,3 +1,7 @@
+element.style {
+    height: 140px;
+}
+
 /*☠❤♛✧UkuT✧♛❤☠ 15253919*/
 #user-rollover.id-15253919.meta, #user-rollover.id-15253919.meta, #user-rollover.id-15253919.meta {
     height: 150px;
