--- a/Developer.css
+++ b/Developer.css
@@ -116,7 +116,7 @@ element.style {
 #chat [data-cid^='5712221-'] .un:hover:after,
 #chat [data-cid^='5712221-'] .un:hover:after,
 #chat [data-cid^='5712221-'] .un:hover:after{
-    content: 'TM Head-Developer';
+    content: 'TM|Head-Developer';
     background-color: black;
     padding: 3px 6px;
     bottom: 20px;
