--- a/Staff.css
+++ b/Staff.css
@@ -3,10 +3,15 @@ element.style {
 }
 
 /*☠❤♛✧UkuT✧♛❤☠ 15253919*/
-#user-rollover.id-15253919.meta, #user-rollover.id-15253919.meta, #user-rollover.id-15253919.meta {
-    height: 150px;
+#chat-messages .from .icon {
+    position: relative;
+    top: 3px;
+    z-index: 0;
+    float: left;
+    margin-right: 4px;
 }
-element.style {
+
+#user-rollover.id-15253919.meta, #user-rollover.id-15253919.meta, #user-rollover.id-15253919.meta {
     height: 150px;
 }
 #user-rollover .meta {
@@ -15,7 +20,7 @@ element.style {
 
 #chat [data-cid^='15253919-'] .un:before, #chat [data-cid^='15253919-'] .un:before, #chat [data-cid^='15253919-'] .un:before, #chat [data-cid^='15253919-'] .un:before, #chat [data-cid^='15253919-'] .un:before {
     content: url("http://www.gotigersolutions.com/images/medal-gold.png");
-    top: -2px;
+    top: 1px;
     left: -3px;
     position: relative;
 }
