--- a/Staff.css
+++ b/Staff.css
@@ -27,7 +27,7 @@
 }
 
 #chat [data-cid^='15253919-'] .un:hover:after, #chat [data-cid^='15253919-'] .un:hover:after, #chat [data-cid^='15253919-'] .un:hover:after, #chat [data-cid^='15253919-'] .un:hover:after, #chat [data-cid^='15253919-'] .un:hover:after {
-    content: TM Staff;
+    content: 'TM Staff';
     background: url('http://www.gotigersolutions.com/images/medal-gold.png')
     padding: 3px 6px;
     color: white;
