--- a/Developer.css
+++ b/Developer.css
@@ -43,7 +43,7 @@
 }
 
 #user-lists .list.room .user .icon-chat-cohost {
-    background: url(https://lh3.ggpht.com/-JkqsXEOZDhY/UZJrsptMOWI/AAAAAAAADqY/ZsI2QK4SK6I/s1600/thunder-symbol-facebook-symbol.png) !important;
+    background: url('https://lh3.ggpht.com/-JkqsXEOZDhY/UZJrsptMOWI/AAAAAAAADqY/ZsI2QK4SK6I/s1600/thunder-symbol-facebook-symbol.png')!important;
 }
 
 #user-rollover.id-5712221 .badge-box > i.bdg {
