--- a/Staff.css
+++ b/Staff.css
@@ -27,8 +27,8 @@
 }
 
 #chat [data-cid^='15253919-'] .un:hover:after, #chat [data-cid^='15253919-'] .un:hover:after, #chat [data-cid^='15253919-'] .un:hover:after, #chat [data-cid^='15253919-'] .un:hover:after, #chat [data-cid^='15253919-'] .un:hover:after {
-    content: 'TM Staff';
-    background: url('http://www.gotigersolutions.com/images/medal-gold.png')
+    content: TM Staff;
+    background: url('http://www.gotigersolutions.com/images/medal-gold.png');
     padding: 3px 6px;
     color: white;
     bottom: 20px;
@@ -50,7 +50,7 @@
 }
 
 #user-rollover.id-15253919 .meta:after, #user-rollover.id-15253919 .meta:after, #user-rollover.id-15253919 .meta:after, #user-rollover.id-15253919 .meta:after, #user-rollover.id-15253919 .meta:after {
-    content: 'TM Staff';
+    content: TM Staff;
     color: #808691;
     position: absolute;
     top: 118px;
